--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,35 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="dollarGreen">#85bb65</color>
+
+    <!-- Light Theme -->
+    <color name="light_ptr_1">#80FFFFFF</color>
+    <color name="light_ptr_2">#4DFFFFFF</color>
+    <color name="light_background">#dddddd</color>
+    <color name="light_background_settings">#f6f6f6</color>
+    <color name="light_text">#020202</color>
+    <color name="light_text_drawer">#20020202</color>
+    <color name="light_date">#555555</color>
+    <color name="light_drawer">#ffffff</color>
+    <color name="emoji_divider_light">#22333333</color>
+    <color name="circle_outline_light">#AA444444</color>
+    <color name="action_bar_light">#DDDDDD</color>
+    <color name="light_message">#FFFFFF</color>
+    <color name="border_light">#18222222</color>
+    <color name="icon_light">#CC5c5c5c</color>
+
+    <!-- Dark Theme -->
+    <color name="dark_background">#262626</color>
+    <color name="dark_text">#f4f4f4</color>
+    <color name="dark_text_drawer">#20f4f4f4</color>
+    <color name="dark_date">#989898</color>
+    <color name="dark_drawer">#292929</color>
+    <color name="emoji_divider_dark">#22000000</color>
+    <color name="circle_outline_dark">#AAAAAAAA</color>
+    <color name="action_bar_dark">#1B1B1B</color>
+    <color name="dark_message">#404040</color>
+    <color name="border_dark">#18FFFFFF</color>
+    <color name="icon_dark">#CCebebeb</color>
+
 </resources>
