--- a/app/src/main/res/layout/dialog_amounts.xml
+++ b/app/src/main/res/layout/dialog_amounts.xml
@@ -11,32 +11,32 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="8dp"
-        android:text="Person 1 Name"
+        android:text="Utilities"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/person1NameEditText"
+        android:id="@+id/utilitiesEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="numberDecimal"
         app:layout_constraintLeft_toRightOf="@+id/textView2"
-        android:layout_marginLeft="19dp"
+        android:layout_marginLeft="10dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginRight="0dp"
         app:layout_constraintRight_toRightOf="parent" />
 
     <EditText
-        android:id="@+id/person1PercentEditText"
+        android:id="@+id/groceriesEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="numberDecimal"
         android:layout_marginTop="12dp"
-        app:layout_constraintTop_toBottomOf="@+id/person1NameEditText"
-        android:layout_marginRight="18dp"
+        app:layout_constraintTop_toBottomOf="@+id/utilitiesEditText"
+        android:layout_marginRight="16dp"
         app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
@@ -46,10 +46,10 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="38dp"
-        android:text="Person 1 Percent"
+        android:text="Groceries"
         app:layout_constraintHorizontal_bias="0.354"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/person1PercentEditText"
+        app:layout_constraintRight_toLeftOf="@+id/groceriesEditText"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
@@ -57,66 +57,41 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="52dp"
-        android:text="Person 2 Name"
-        app:layout_constraintHorizontal_bias="0.523"
+        android:layout_marginTop="51dp"
+        android:text="Misc"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/person2NameEditText"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="39dp"
-        android:text="Person 2 Percent"
-        app:layout_constraintHorizontal_bias="0.506"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/person2PercentEditText"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintRight_toLeftOf="@+id/miscEditText"
+        android:layout_marginRight="8dp" />
 
     <EditText
-        android:id="@+id/person2NameEditText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="12dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/person1PercentEditText" />
-
-    <EditText
-        android:id="@+id/person2PercentEditText"
+        android:id="@+id/miscEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="numberDecimal"
-        android:layout_marginTop="12dp"
-        app:layout_constraintTop_toBottomOf="@+id/person2NameEditText"
         android:layout_marginRight="16dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/groceriesEditText" />
 
     <Button
-        android:id="@+id/nameselectPositiveButton"
+        android:id="@+id/amountPositiveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="OK"
-        android:layout_marginRight="19dp"
+        android:layout_marginRight="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/person2PercentEditText" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/miscEditText" />
 
     <Button
-        android:id="@+id/nameselectNegativeButton"
+        android:id="@+id/amountNegativeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="CANCEL"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/person2PercentEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/miscEditText" />
 </android.support.constraint.ConstraintLayout>
