--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,6 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Dollar Amount"
+        android:textSize="30sp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
@@ -23,7 +24,10 @@
         android:textColor="@color/dollarGreen"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="30dp"
-        app:layout_constraintHorizontal_bias="0.501" />
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.068" />
 
     <com.github.mikephil.charting.charts.PieChart
         android:layout_width="match_parent"
