--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -70,6 +70,7 @@
             <item>@color/dot_light_screen2</item>
             <item>@color/dot_light_screen3</item>
             <item>@color/dot_light_screen4</item>
+            <item>@color/dot_light_screen4</item>
         </array>
 
         <array name="array_dot_inactive">
@@ -77,6 +78,7 @@
             <item>@color/dot_dark_screen2</item>
             <item>@color/dot_dark_screen3</item>
             <item>@color/dot_dark_screen4</item>
+            <item>@color/dot_light_screen4</item>
         </array>
 </resources>
 
